Restyled the 'scores' button according to the new (provisional) controlbar icons. Shows a gap, which I'll fix up in a few hours, and doesn't hover or depress, which'll be fixed when we finalize these new icon styles.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -474,6 +474,15 @@ TabNavigator, TabBar {
   disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/button_scale.png");
 }
 
+.controlBarButtonScores {
+  /* other states TODO */
+  upSkin: ClassReference(null);
+  overSkin: ClassReference(null);
+  downSkin: ClassReference(null);
+  disabledSkin: ClassReference(null);
+  skin: Embed(source="../../rsrc/media/skins/controlbar/scores.png");
+}
+
 .controlBarHoverZone {
   disabledSkin: Embed(source="../../rsrc/media/skins/controlbar/hoverzone.png");
 }
